# haagenti

./: .gitignore  BENCHMARK_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  README.md  STASH-TODO.md  apply_fixes.sh  sigil_bootstrap.c  test_inference.py
crates/haagenti/: Cargo.toml
crates/haagenti-adaptive/: Cargo.toml
crates/haagenti-adaptive/src/: error.rs  lib.rs  precision.rs  profile.rs  schedule.rs  transition.rs
crates/haagenti-autoopt/: Cargo.toml
crates/haagenti-autoopt/src/: bayesian.rs  error.rs  genetic.rs  hardware.rs  lib.rs  profiler.rs  tuner.rs
crates/haagenti-brotli/: Cargo.toml
crates/haagenti-brotli/src/: lib.rs
crates/haagenti-core/: Cargo.toml
crates/haagenti-core/src/: dct.rs  error.rs  lib.rs  stats.rs  stream.rs  traits.rs  types.rs
crates/haagenti-cuda/: Cargo.toml  README.md
crates/haagenti-cuda/examples/: benchmark_dct.rs  conformance_test.rs  test_direct_kernels.rs  test_hct_decompress.rs  test_inference.py  validate_compressed_inference.rs  validate_roundtrip.rs
crates/haagenti-cuda/src/: cufft_ffi.rs  dct_gpu.rs  decompress.rs  error.rs  kernels.rs  lib.rs  memory.rs  native_kernels.rs  neural_gpu.rs  pipeline.rs  stream.rs  zstd_gpu.rs
crates/haagenti-deflate/: Cargo.toml
crates/haagenti-deflate/src/: codec.rs  deflate.rs  gzip.rs  huffman.rs  inflate.rs  lib.rs  zlib.rs
crates/haagenti-distributed/: Cargo.toml
crates/haagenti-distributed/src/: coordinator.rs  error.rs  lib.rs  node.rs  partition.rs  protocol.rs  topology.rs
crates/haagenti-fragments/: Cargo.toml
crates/haagenti-fragments/benches/: fragment_matching.rs
crates/haagenti-fragments/src/: error.rs  fragment.rs  lib.rs  library.rs  manifest.rs  signature.rs  similarity.rs
crates/haagenti-grpc/: Cargo.toml  build.rs
crates/haagenti-grpc/proto/: compression.proto
crates/haagenti-grpc/src/: config.rs  lib.rs  main.rs  metrics.rs  service.rs  tls.rs
crates/haagenti-hct/: Cargo.toml
crates/haagenti-hct/src/: holotensor.rs  lib.rs  tensor.rs
crates/haagenti-importance/: Cargo.toml
crates/haagenti-importance/src/: analyzer.rs  error.rs  history.rs  lib.rs  predictor.rs  scorer.rs
crates/haagenti-latent-cache/: Cargo.toml
crates/haagenti-latent-cache/src/: cache.rs  divergence.rs  embedding.rs  error.rs  lib.rs  search.rs  storage.rs
crates/haagenti-learning/: Cargo.toml
crates/haagenti-learning/src/: adapter.rs  buffer.rs  consolidation.rs  error.rs  lib.rs  scheduler.rs  trainer.rs
crates/haagenti-lz4/: Cargo.toml
crates/haagenti-lz4/benches/: lz4_benchmark.rs
crates/haagenti-lz4/src/: block.rs  codec.rs  compress.rs  decompress.rs  hc.rs  lib.rs
crates/haagenti-merging/: Cargo.toml
crates/haagenti-merging/src/: dare.rs  error.rs  evolutionary.rs  lib.rs  linear.rs  slerp.rs  ties.rs  weights.rs
crates/haagenti-mobile/: Cargo.toml
crates/haagenti-mobile/src/: coreml.rs  error.rs  lib.rs  nnapi.rs  quantization.rs  runtime.rs  thermal.rs
crates/haagenti-network/: Cargo.toml
crates/haagenti-network/src/: cache.rs  client.rs  config.rs  error.rs  lib.rs  loader.rs  priority.rs  scheduler.rs
crates/haagenti-neural/: Cargo.toml
crates/haagenti-neural/src/: codebook.rs  decoder.rs  encoder.rs  error.rs  format.rs  lib.rs  residual.rs  training.rs
crates/haagenti-python/: Cargo.toml  README.md  pyproject.toml
crates/haagenti-python/src/: lib.rs
crates/haagenti-python/tests/: test_python_bindings.py
crates/haagenti-serverless/: Cargo.toml
crates/haagenti-serverless/src/: cold_start.rs  error.rs  fragment_pool.rs  lib.rs  provider.rs  snapshot.rs  state.rs
crates/haagenti-simd/: Cargo.toml
crates/haagenti-simd/src/: hash.rs  histogram.rs  lib.rs  match_finder.rs  memops.rs
crates/haagenti-sparse/: Cargo.toml
crates/haagenti-sparse/src/: analysis.rs  categories.rs  error.rs  kernel.rs  lib.rs  mask.rs  predictor.rs
crates/haagenti-speculative/: Cargo.toml
crates/haagenti-speculative/src/: buffer.rs  error.rs  intent.rs  lib.rs  loader.rs  session.rs
crates/haagenti-stream/: Cargo.toml
crates/haagenti-stream/src/: async_io.rs  buffer.rs  lib.rs  reader.rs  writer.rs
crates/haagenti-streaming/: Cargo.toml
crates/haagenti-streaming/benches/: streaming_preview.rs  streaming_throughput.rs
crates/haagenti-streaming/src/: adaptive.rs  controller.rs  decoder.rs  error.rs  lib.rs  preview.rs  protocol.rs  scheduler.rs  stream.rs
crates/haagenti-webgpu/: Cargo.toml
crates/haagenti-webgpu/src/: buffer.rs  cache.rs  context.rs  error.rs  lib.rs  pipeline.rs  shader.rs
crates/haagenti-zstd/: Cargo.toml  README.md
crates/haagenti-zstd/benches/: general_purpose_benchmark.rs  zstd_benchmark.rs
crates/haagenti-zstd/docs/: COMPRESSION_OPTIMIZATION_ROADMAP.md  PERFORMANCE-DOMINATION-ROADMAP.md  PERFORMANCE-ROADMAP.md
crates/haagenti-zstd/examples/: analyze_blocks.rs  analyze_cyclic.rs  analyze_huffman.rs  analyze_lit_format.rs  benchmark_comparison.rs  byte_compare.rs  check_of_states.rs  check_of_table.rs  compare_bitstreams.rs  compare_block_types.rs  compare_encoding.rs  compare_good_bad.rs  compare_headers.rs  compare_levels.rs  compare_output.rs  compare_sequences.rs  compare_with_ref.rs  compare_working_broken.rs  compare_working_failing.rs  comprehensive_test.rs  cross_decode.rs  debug_2lines.rs  debug_decode.rs  debug_encode_decode.rs  debug_fse.rs  debug_full_stream.rs  debug_huffman.rs  debug_minimal.rs  debug_offset0.rs  debug_repeat.rs  debug_rle_like.rs  debug_rle_like2.rs  debug_rle_like3.rs  debug_sequence.rs  debug_sequences.rs  debug_simple.rs  decode_bitstream.rs  decode_both.rs  decode_debug.rs  decode_our_frame.rs  (+66 more)
crates/haagenti-zstd/src/: decompress.rs  dictionary.rs  lib.rs  perf_tests.rs
crates/haagenti/benches/: compression.rs
crates/haagenti/examples/: benchmark_comprehensive.rs  compress_405b.rs  compress_adaptive.rs  compress_selective.rs  compress_turbo.rs  create_compressed_model.rs  roundtrip_validation.rs  safetensors_to_compressive_hct.rs  safetensors_to_hct.rs  safetensors_to_holographic.rs  safetensors_to_int4_hct.rs  test_bf16_zstd.rs  (+9 more)
(+425 files in other folders)
