[package]
name = "haagenti-deflate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Deflate, Zlib, and Gzip compression for Haagenti"
keywords = ["compression", "deflate", "gzip", "zlib"]
categories = ["compression", "encoding"]

[features]
default = ["std", "gzip", "zlib"]
std = ["haagenti-core/std"]
simd = ["haagenti-simd"]
gzip = []   # Gzip format support
zlib = []   # Zlib format support

[dependencies]
haagenti-core = { workspace = true }
haagenti-simd = { workspace = true, optional = true }
crc32fast = { workspace = true }
adler = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
flate2 = { workspace = true }  # Reference implementation for testing
