[package]
name = "haagenti-distributed"
version = "0.1.0"
edition = "2021"
description = "Distributed inference across multiple nodes with tensor parallelism"
license = "MIT"
authors = ["Daemoniorum LLC"]
keywords = ["distributed", "inference", "tensor-parallel", "pipeline-parallel"]
categories = ["concurrency", "network-programming"]

[dependencies]
haagenti-core = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Networking
reqwest = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }

# Data structures
bytes = { workspace = true }
smallvec = { workspace = true }
dashmap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
arcanum-primitives = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
tensor-parallel = []
pipeline-parallel = []
expert-parallel = []
ring-allreduce = []
