[package]
name = "haagenti-fragments"
version = "0.1.0"
edition = "2021"
description = "Cross-model fragment sharing library for HoloTensor compression"
license.workspace = true
repository.workspace = true
authors = ["Daemoniorum LLC"]
keywords = ["compression", "neural-networks", "fragments", "deduplication"]
categories = ["compression", "science"]

[dependencies]
haagenti-core = { workspace = true }
haagenti-hct = { workspace = true }

# Hashing and similarity
arcanum-primitives = { workspace = true }
simsimd = "6.5"
half = "2.4"

# Data structures
dashmap = "6.1"
indexmap = { version = "2.7", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
bincode = "1.3"

# Async
tokio = { version = "1", features = ["fs", "io-util", "sync", "macros", "rt"] }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
tokio-test = "0.4"
rand = "0.8"

[[bench]]
name = "fragment_matching"
harness = false
