[package]
name = "haagenti-hct"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Haagenti Compressed Tensor (HCT) format with HoloTensor holographic compression"
keywords = ["compression", "tensor", "neural-network", "llm", "holographic"]
categories = ["compression", "encoding", "science"]

[features]
default = ["full"]
# Include LZ4 compression support (for tests/examples)
lz4 = ["dep:haagenti-lz4"]
# Include Zstd compression support (for tests/examples)
zstd = ["dep:haagenti-zstd"]
# All features
full = ["lz4", "zstd"]

[dependencies]
# Core traits (Compressor, Decompressor, Result, Error)
haagenti-core = { workspace = true, features = ["dct"] }

# Checksums
xxhash-rust = { workspace = true }

# External zstd for reliable decompression in HoloTensorReader
# (haagenti-zstd has compatibility issues with some zstd streams)
zstd = "0.13"

# Compression algorithm implementations (optional, for tests/examples)
haagenti-lz4 = { workspace = true, optional = true }
haagenti-zstd = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = "3.25"
# Always include compression for tests
haagenti-lz4 = { workspace = true }
haagenti-zstd = { workspace = true }
