[package]
name = "haagenti-learning"
version = "0.1.0"
edition = "2021"
description = "Continuous learning and online adaptation for models"
license.workspace = true
repository.workspace = true
authors = ["Daemoniorum LLC"]
keywords = ["continuous-learning", "online-learning", "adaptation", "lora"]
categories = ["science::machine-learning"]

[dependencies]
haagenti-core = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Data structures
bytes = { workspace = true }
smallvec = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
arcanum-primitives = { workspace = true }

# Random
rand = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
lora = []
replay-buffer = []
ewc = []
progressive = []
