[package]
name = "haagenti-network"
version = "0.1.0"
edition = "2021"
description = "CDN-based network streaming for HoloTensor fragments"
license = "MIT"
authors = ["Daemoniorum LLC"]
keywords = ["cdn", "streaming", "fragments", "model-loading"]
categories = ["network-programming", "asynchronous"]

[dependencies]
haagenti-core = { workspace = true }
haagenti-fragments = { workspace = true }

# HTTP client
reqwest = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }

# Data structures
bytes = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Hashing & checksums
arcanum-primitives = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# URL parsing
url = "2.5"

# Backoff for retries
backoff = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"

[[bench]]
name = "network_streaming"
harness = false
