[package]
name = "haagenti-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Python bindings for Haagenti tensor compression library"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["python", "tensor", "compression", "machine-learning"]

[lib]
name = "haagenti_python"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

# Haagenti crates
haagenti.workspace = true
haagenti-core.workspace = true
haagenti-lz4.workspace = true
haagenti-zstd.workspace = true

# Error handling
thiserror.workspace = true

# Float16/BFloat16 support
half = "2.4"

[build-dependencies]
pyo3-build-config = "0.28"

[features]
default = []
