[package]
name = "haagenti-serverless"
version = "0.1.0"
edition = "2021"
description = "Serverless deployment with cold start optimization and GPU memory management"
license = "MIT"
authors = ["Daemoniorum LLC"]
keywords = ["serverless", "cold-start", "gpu", "lambda", "inference"]
categories = ["asynchronous", "caching"]

[dependencies]
haagenti-core = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Data structures
bytes = { workspace = true }
smallvec = { workspace = true }
dashmap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Hashing
arcanum-primitives = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "cold_start"
harness = false

[features]
default = []
aws-lambda = []
cloudflare-workers = []
gpu-snapshot = []
prewarm = []
